--- a/sekaiisannQuizApp/Base.lproj/Main.storyboard
+++ b/sekaiisannQuizApp/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4O4-oR-5B1">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,147 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="sekaiisannQuizApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VFC-Qh-3P2">
+                                <rect key="frame" x="0.0" y="64" width="320" height="195"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="195" id="Y6f-hn-Kfl"/>
+                                    <constraint firstAttribute="width" constant="320" id="bll-Nd-Kfw"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Hkm-XL-c3o">
+                                <rect key="frame" x="10" y="424" width="300" height="134"/>
+                                <subviews>
+                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gYe-DL-4aA">
+                                        <rect key="frame" x="0.0" y="0.0" width="73" height="134"/>
+                                        <color key="backgroundColor" red="0.80773574859426389" green="1" blue="0.74287473495172796" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="1"/>
+                                        <connections>
+                                            <action selector="answerButtom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ahU-SP-0mz"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lZ-MF-wmA">
+                                        <rect key="frame" x="76" y="0.0" width="72.5" height="134"/>
+                                        <color key="backgroundColor" red="0.95798184515840723" green="0.48969439306122331" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="2">
+                                            <color key="titleColor" red="0.22597949000000001" green="1" blue="0.23378109129999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="answerButtom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="J4E-5l-pQ6"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3R4-GK-87i">
+                                        <rect key="frame" x="151.5" y="0.0" width="73" height="134"/>
+                                        <color key="backgroundColor" red="0.29585068838979967" green="0.24488658992447965" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="3"/>
+                                        <connections>
+                                            <action selector="answerButtom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uex-2o-4ce"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JSm-Ty-xwe">
+                                        <rect key="frame" x="227.5" y="0.0" width="72.5" height="134"/>
+                                        <color key="backgroundColor" red="1" green="0.018461708577807601" blue="0.22083927960311056" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <state key="normal" title="4"/>
+                                        <connections>
+                                            <action selector="answerButtom:" destination="BYZ-38-t0r" eventType="touchUpInside" id="fZW-GX-fpE"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dNC1bUXLQcObsp1Xr5tbIA_thumb_119f" translatesAutoresizingMaskIntoConstraints="NO" id="HBl-v7-Jbg">
+                                <rect key="frame" x="10" y="264" width="300" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="QUk-5A-wix"/>
+                                    <constraint firstAttribute="width" constant="300" id="T22-26-lgp"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.98874666345016804" green="1" blue="0.96458551230895506" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="Hkm-XL-c3o" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="0X5-Ig-myf"/>
+                            <constraint firstItem="VFC-Qh-3P2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="8B5-5z-IJP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Hkm-XL-c3o" secondAttribute="bottom" constant="10" id="FI0-zy-USs"/>
+                            <constraint firstItem="VFC-Qh-3P2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Hm9-kK-gIU"/>
+                            <constraint firstItem="HBl-v7-Jbg" firstAttribute="top" secondItem="VFC-Qh-3P2" secondAttribute="bottom" constant="5" id="QPD-1M-1sZ"/>
+                            <constraint firstItem="Hkm-XL-c3o" firstAttribute="top" secondItem="HBl-v7-Jbg" secondAttribute="bottom" constant="10" id="URD-NQ-dAr"/>
+                            <constraint firstItem="Hkm-XL-c3o" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Yzd-ao-vtb"/>
+                            <constraint firstItem="VFC-Qh-3P2" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="gxD-ye-GzF"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Hkm-XL-c3o" secondAttribute="trailing" constant="10" id="hlD-oc-fhr"/>
+                            <constraint firstItem="HBl-v7-Jbg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sVD-9s-Ee0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="D7Z-cc-tpE"/>
+                    <connections>
+                        <outlet property="questionView" destination="VFC-Qh-3P2" id="U2l-Jw-hlQ"/>
+                        <segue destination="ctx-F7-s0P" kind="show" identifier="answerResult" id="jTd-Rk-guL"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1134.375" y="114.08450704225352"/>
+        </scene>
+        <!--Result Table View Controller-->
+        <scene sceneID="12I-YL-a8p">
+            <objects>
+                <tableViewController id="ctx-F7-s0P" customClass="ResultTableViewController" customModule="sekaiisannQuizApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="bkG-Xg-5uT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="YKN-gf-rjH">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YKN-gf-rjH" id="qdx-bO-Xie">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
+                        <connections>
+                            <outlet property="dataSource" destination="ctx-F7-s0P" id="qbn-gw-eqh"/>
+                            <outlet property="delegate" destination="ctx-F7-s0P" id="oJ4-RN-yoP"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nZX-XU-xHh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1928" y="114"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cr0-hn-wdo">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4O4-oR-5B1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4U2-wY-ogw">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Dh9-lc-bEQ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MAd-4D-faL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="309" y="113"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="dNC1bUXLQcObsp1Xr5tbIA_thumb_119f" width="1024" height="768"/>
+    </resources>
 </document>
